--- a/add_superuser/.meta-cnc.yaml
+++ b/add_superuser/.meta-cnc.yaml
@@ -27,7 +27,7 @@ variables:
   - name: password
     description: password
     default: password
-    type_hint: password
+    type_hint: text
 
 # snippets used for api configuration including xpath and element as file name
 # files will load in the order listed
